# grilly-plugins

./: .gitignore
elephant-coder/: .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  consolidator.py  framework_detector.py  global_store.py  indexer.py  link_graph.py  memory_store.py  mental_model.py  merit_ledger.py  module_system.py  news_reader.py  pyproject.toml  research_engine.py  retriever.py  scope_guard.py  server.py  settings.py  task_manager.py  think_tank.py  user_profile.py  vector_store.py
elephant-coder/.claude/: elephant-coder.local.md  settings.local.json
elephant-coder/.claude-plugin/: plugin.json
elephant-coder/.github/workflows/: ci.yml
elephant-coder/commands/: changelog.md  cicd.md  configure.md  ensemble.md  feeds.md  git-versioning.md  graph.md  index.md  merits.md  modules.md  pdf-convert.md  persona.md  second-opinion.md  status.md  think-tank.md  user-profile.md
elephant-coder/hooks/: _reindex.py  hooks.json  posttooluse_edit.py  posttooluse_write.py  precompact.py  pretooluse_read.py  pretooluse_search.py  session_start.py  userpromptsubmit.py
elephant-coder/skills/changelog/: SKILL.md
elephant-coder/skills/cicd/: SKILL.md
elephant-coder/skills/configure/: SKILL.md
elephant-coder/skills/ensemble/: SKILL.md
elephant-coder/skills/feeds/: SKILL.md
elephant-coder/skills/git-versioning/: SKILL.md
elephant-coder/skills/index/: SKILL.md
elephant-coder/skills/ingest/: SKILL.md
elephant-coder/skills/merits/: SKILL.md
elephant-coder/skills/modules/: SKILL.md
elephant-coder/skills/pdf-convert/: SKILL.md
elephant-coder/skills/persona/: SKILL.md
elephant-coder/skills/recall/: SKILL.md
elephant-coder/skills/recent/: SKILL.md
elephant-coder/skills/second-opinion/: SKILL.md
elephant-coder/skills/think-tank/: SKILL.md
elephant-coder/skills/user-profile/: SKILL.md
elephant-coder/tests/: test_framework_detector.py  test_global_store.py  test_link_graph.py  test_memory_store.py  test_mental_model.py  test_news_reader.py  test_research_engine.py  test_scope_guard.py  test_server.py  test_settings.py  test_task_manager.py
elephant-coder2/: .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
elephant-coder2/.claude-plugin/: plugin.json
elephant-coder2/broker/: __main__.py  client.py  handlers.py  paths.py  protocol.py  server.py  settings.py
elephant-coder2/broker/indexer/: python_ast.py  regex_extract.py  structured.py
elephant-coder2/broker/store/: embedder.py  redis_cache.py  sqlite_store.py  unified.py  vector_store.py
elephant-coder2/commands/: index.md  recall.md  status.md
elephant-coder2/mcpd/: server.py
elephant-coder2/skills/agent-blueprint/: SKILL.md
elephant-coder2/tests/: test_broker_server.py  test_handlers.py  test_indexer_other.py  test_indexer_python.py  test_paths.py  test_protocol.py  test_redis_cache.py  test_settings.py  test_sqlite_store.py  test_unified_store.py  test_vector_store.py
(+13 files in other folders)
