[project]
name = "elephant-coder"
version = "0.2.1"
description = "MCP server for persistent codebase memory — inspired by hippocampal memory circuits"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "redis>=5.0.0",
    "pypdf>=4.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "memory_store", "indexer", "retriever", "consolidator"]
