[project]
name = "elephant-coder"
version = "0.2.1"
description = "MCP server for persistent codebase memory — invisible knowledge injection for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pypdf>=4.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
all = ["redis>=5.0.0", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "memory_store", "indexer", "retriever", "consolidator", "settings", "global_store", "link_graph", "mental_model", "framework_detector", "task_manager", "scope_guard"]
