[project]
name = "elephant-coder"
version = "0.3.16"
description = "MCP server for persistent codebase memory — invisible knowledge injection for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "pypdf>=4.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "httpx>=0.27.0",
    "redis>=7.3.0",
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.9.0"]
all = ["httpx>=0.27.0", "qdrant-client>=1.9.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "memory_store", "indexer", "retriever", "consolidator", "settings", "global_store", "link_graph", "mental_model", "framework_detector", "task_manager", "scope_guard", "news_reader", "research_engine", "vector_store", "user_profile", "module_system", "merit_ledger", "think_tank"]
