[project]
name = "elephant-coder2"
version = "0.1.0"
description = "Automatic memory activation for Claude Code"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.2.0",
  "redis>=7.3.0",
  "numpy>=1.26.0",
  "sentence-transformers>=3.0.0",
  "pypdf>=4.0.0",
  "pyyaml>=6.0",
  "httpx>=0.27.0",
  "llama-cpp-python>=0.3.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["broker*", "mcp*"]
